changed font size

--- a/adlerPlanetarium.html
+++ b/adlerPlanetarium.html
@@ -22,51 +22,51 @@
     <h2 style="text-align: center;"> Adler Planetarium </h2>   
     <div style = "padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">Founded in 1930 by Max Adler, the Adler Planetarium is a public museum built to be dedicated to the study of atrophysics and astronomy, and is Chicago's first planetarium</p>
+        <p style="padding-bottom: 5px; font-size: 18px;">Founded in 1930 by Max Adler, the Adler Planetarium is a public museum built to be dedicated to the study of atrophysics and astronomy, and is Chicago's first planetarium</p>
         
 
         <h4>Costs:</h4>
         <table style="width: 75%;">
             <tr>
               <th> </th>
-              <th>Museum <br> Entry</th>
-              <th>Museum <br> Entry +1</th>
-              <th>Museum <br> Entry +2</th>
-              <th>Unlimited</th>
+              <th style = "font-size: 18px;">Museum <br> Entry</th>
+              <th style = "font-size: 18px;">Museum <br> Entry +1</th>
+              <th style = "font-size: 18px;">Museum <br> Entry +2</th>
+              <th style = "font-size: 18px;">Unlimited</th>
             </tr>
             <tr class = "spaceUnder">
-              <td>Adult</td>
-              <td>$19 </td>
-              <td>$28 </td>
-              <td>$35 </td>
-              <td>$50 </td>
+              <td style = "font-size: 18px;">Adult</td>
+              <td style = "font-size: 18px;">$19 </td>
+              <td style = "font-size: 18px;">$28 </td>
+              <td style = "font-size: 18px;">$35 </td>
+              <td style = "font-size: 18px;">$50 </td>
             </tr>
             <tr>
-              <td>Children (3-11)</td>
-              <td>$8 </td>
-              <td>$17 </td>
-              <td>$24 </td>
-              <td>$39 </td>
+              <td style = "font-size: 18px;">Children (3-11)</td>
+              <td style = "font-size: 18px;">$8 </td>
+              <td style = "font-size: 18px;">$17 </td>
+              <td style = "font-size: 18px;">$24 </td>
+              <td style = "font-size: 18px;">$39 </td>
             </tr>
           </table>
           <br>
         <br>
         <h4>Memberships:</h5>
-            <p>Thinking about becoming a member? Here are some of the benefits: </p>
+            <p style = "font-size: 18px;">Thinking about becoming a member? Here are some of the benefits: </p>
             <ul>
-                <li>Unlimited free admssion and sky show tickets</li>
-                <li>15% Discound at the Space Shop</li>
-                <li>10% Discount at the Cosmic Cafe</li>
-                <li>50% Discount on Adler After Dark tickets</li>
-                <li>And more!</li>
+                <li style = "font-size: 18px;">Unlimited free admssion and sky show tickets</li>
+                <li style = "font-size: 18px;">15% Discound at the Space Shop</li>
+                <li style = "font-size: 18px;">10% Discount at the Cosmic Cafe</li>
+                <li style = "font-size: 18px;">50% Discount on Adler After Dark tickets</li>
+                <li style = "font-size: 18px;">And more!</li>
             </ul>
-            <p>Memberships start at $60 for one Adult for one year (Individual) and go up to $240 for one year (Family & Friends), with benefits varying by membership </p>
-            <a href = "https://www.adlerplanetarium.org/support/memberships/" target="_blank"> For more information about Memberships, click here!</a>
+            <p style = "font-size: 18px;">Memberships start at $60 for one Adult for one year (Individual) and go up to $240 for one year (Family & Friends), with benefits varying by membership </p>
+            <a href = "https://www.adlerplanetarium.org/support/memberships/" target="_blank" style = "font-size: 18px;"> For more information about Memberships, click here!</a>
             <br>
             <br>
             <br>
         <h4>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;">The Adler Planetarium is currently closed due to Covid. However, the Planetarium plans on reopening in March 2022!</p>
+        <p style="padding-bottom: 5px; font-size: 18px;">The Adler Planetarium is currently closed due to Covid. However, the Planetarium plans on reopening in March 2022!</p>
         
 
 
