--- a/divvy.html
+++ b/divvy.html
@@ -22,25 +22,25 @@
     <h2 style="text-align: center;"> Divvy Bikes </h2>   
     <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">Divvy is a bike sharing system created by Lyft, with several stations dispered around the City of Chicago, so you can pick up and drop off your bike with ease!</p>
+        <p style="padding-bottom: 5px; font-size: 18px;">Divvy is a bike sharing system created by Lyft, with several stations dispered around the City of Chicago, so you can pick up and drop off your bike with ease!</p>
         
         <h4>Costs:</h4>
-        <p>Single Ride: $3.30/Ride (One ride up to 30 minutes) <br>
+        <p style = "font-size: 18px;">Single Ride: $3.30/Ride (One ride up to 30 minutes) <br>
             Day Pass: $15/Day (Unlimited 3 hour rides within a 24 hour period)<br>
             Annual Pass: $9/Month (Unlimited 45 minute rides)<br>
            </p>
         <br>
         <h4>How to Ride with Divvy:</h4>
         <ol>
-            <li>Buy a ride pass from a Divvy station kiosk or by downloading the Divvy Bikes App</li>
-            <li>Find an available bike station nearby your location</li>
-            <li>Scan your QR code or use your member key to unlock a bike</li>
-            <li>Ride as long as you pass or membership is active</li>
-            <li>After your pass or membership is inactive, return your bike to any avaiable station, and wait for the bike to lock in, indicated by the green light on the dock</li>
+            <li style = "font-size: 18px;">Buy a ride pass from a Divvy station kiosk or by downloading the Divvy Bikes App</li>
+            <li style = "font-size: 18px;">Find an available bike station nearby your location</li>
+            <li style = "font-size: 18px;">Scan your QR code or use your member key to unlock a bike</li>
+            <li style = "font-size: 18px;">Ride as long as you pass or membership is active</li>
+            <li style = "font-size: 18px;">After your pass or membership is inactive, return your bike to any avaiable station, and wait for the bike to lock in, indicated by the green light on the dock</li>
         </ol>
         <br>
         <h4>Locations:</h4>
-        <a href="https://www.divvybikes.com/" target="_blank">Divvy Main Website</a>
+        <a href="https://www.divvybikes.com/" target="_blank" style = "font-size: 18px;">Divvy Main Website</a>
         
     </div>
 
