--- a/parkingTypes.html
+++ b/parkingTypes.html
@@ -34,32 +34,32 @@
         <div style="padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
             <br>
             <h4>About:</h4> 
-            <p style="padding-bottom: 5px;">The main parking types for tourists in Chicago are: meter, paid and public</p>
+            <p style="padding-bottom: 5px; font-size: 18px;">The main parking types for tourists in Chicago are: meter, paid and public</p>
             <br>
             <br>
             <h4>Meter</h4>
             <ul>
-                <li> Those are parkings on the street</li>
-                <li> Look for green "Pay to Park" or "P" sign and small pay machine</li>
-                <li> You have to pay for how many hours you want your car to be parked for</li>
-                <li> Since parking in Chicago is modern, cash as well as credit and debit cards are accepted</li>
-                <li> Rates will vary depending on day and time</li>
+                <li style = "font-size: 18px;"> Those are parkings on the street</li>
+                <li style = "font-size: 18px;"> Look for green "Pay to Park" or "P" sign and small pay machine</li>
+                <li style = "font-size: 18px;"> You have to pay for how many hours you want your car to be parked for</li>
+                <li style = "font-size: 18px;"> Since parking in Chicago is modern, cash as well as credit and debit cards are accepted</li>
+                <li style = "font-size: 18px;"> Rates will vary depending on day and time</li>
             </ul>
             <br>
             <br>
             <h4>Paid</h4>
             <ul>
-                <li> Paid parkings could be hotels, garages or even attraction's on site parkings</li>
-                <li> Usually a bit more protected, not on street</li>
-                <li> Rates can vary depending on where and what kind of paid parking you get</li>
+                <li style = "font-size: 18px;"> Paid parkings could be hotels, garages or even attraction's on site parkings</li>
+                <li style = "font-size: 18px;"> Usually a bit more protected, not on street</li>
+                <li style = "font-size: 18px;"> Rates can vary depending on where and what kind of paid parking you get</li>
             </ul>
             <br>
             <br>
             <h4>Public</h4>
             <ul>
-                <li> Public ones are the free parkings offered to all</li>
-                <li> Usually they are located near public parks and other public areas</li>
-                <li> Be careful, don't count on having enough space to park your car, usually most spots are taken</li>
+                <li style = "font-size: 18px;"> Public ones are the free parkings offered to all</li>
+                <li style = "font-size: 18px;"> Usually they are located near public parks and other public areas</li>
+                <li style = "font-size: 18px;"> Be careful, don't count on having enough space to park your car, usually most spots are taken</li>
             </ul>
         </div>
     </body>
