--- a/spotHero.html
+++ b/spotHero.html
@@ -34,7 +34,7 @@
         <div style="padding-left: 70px; padding-right: 70px;  padding-bottom: 50px;">
             <br>
             <h4>About:</h4> 
-            <p style="padding-bottom: 5px;">SpotHero is a digital parking marketplace that allows users to reserve and pay for parking spaces in lots, garages, and valet servcies</p>
+            <p style="padding-bottom: 5px; font-size: 18px;">SpotHero is a digital parking marketplace that allows users to reserve and pay for parking spaces in lots, garages, and valet servcies</p>
 
             <br>
 
@@ -42,36 +42,35 @@
             <br>
             <h5>How to use the SpotHero Website:</h5>
             <ol>
-                <li> Select your type of parking from Hourly, Monthly, and Airport</li>
-                <li> Enter your location, or select "Find Parking Near Me"</li>
-                <li> Add any necessary information, like enter and exit time</li>
-                <li> Scroll through and find the best parking option for you, and select "Book Now"</li>
-                <li> Enter your email  and continue as a guest, or sign in or create and acount for reservation details</li>
-                <li> Review your reservation details, and enter in your phone number, along with the make and model of your car</li>
-                <li> Enter your payment method, and to finish, tap "Pay and Reserve"</li>
-                <li> All details and passes for your reservation will be emailed to you, so scan the provided QR code while entering and exiting the parking area for access</li>
+                <li style = "font-size: 18px;"> Select your type of parking from Hourly, Monthly, and Airport</li>
+                <li style = "font-size: 18px;"> Enter your location, or select "Find Parking Near Me"</li>
+                <li style = "font-size: 18px;"> Add any necessary information, like enter and exit time</li>
+                <li style = "font-size: 18px;"> Scroll through and find the best parking option for you, and select "Book Now"</li>
+                <li style = "font-size: 18px;"> Enter your email  and continue as a guest, or sign in or create and acount for reservation details</li>
+                <li style = "font-size: 18px;"> Review your reservation details, and enter in your phone number, along with the make and model of your car</li>
+                <li style = "font-size: 18px;"> Enter your payment method, and to finish, tap "Pay and Reserve"</li>
+                <li style = "font-size: 18px;"> All details and passes for your reservation will be emailed to you, so scan the provided QR code while entering and exiting the parking area for access</li>
             </ol>
-            <a href = "https://spothero.com/" target = "_blank">Link to SpotHero Main Website</a>
+            <a href = "https://spothero.com/" target = "_blank" style = "font-size: 18px;">Link to SpotHero Main Website</a>
             <br>
             <br>
             <h5>How to use the SpotHero App:</h5>
             <ol>
-                <li> Sign in, Create and account, or continue as a guest</li>
-                <li> Enter your Address, Venue, or Airport</li>
-                <li> Select your type of parking from Hourly, Monthly, and Airport</li>
-                <li> Enter the start and end times for parking</li>
-                <li> Scroll through and select bubbles to find the best parking option for you, and select "Book Now"</li>
-                <li> Select "Checkout" to continue to payment</li>
-                <li> Review your reservation details, and enter in your phone number, along with the make and model of your car</li>
-                <li> Enter your payment method, and to finish, tap "Reserve Spot"</li>
-                <li> To access your reservation, open up the "Reservations" Tab and select your reservation, and scan the QR code while entering and exiting the parking area for access</li>
-
+                <li style = "font-size: 18px;"> Sign in, Create and account, or continue as a guest</li>
+                <li style = "font-size: 18px;"> Enter your Address, Venue, or Airport</li>
+                <li style = "font-size: 18px;"> Select your type of parking from Hourly, Monthly, and Airport</li>
+                <li style = "font-size: 18px;"> Enter the start and end times for parking</li>
+                <li style = "font-size: 18px;"> Scroll through and select bubbles to find the best parking option for you, and select "Book Now"</li>
+                <li style = "font-size: 18px;"> Select "Checkout" to continue to payment</li>
+                <li style = "font-size: 18px;"> Review your reservation details, and enter in your phone number, along with the make and model of your car</li>
+                <li style = "font-size: 18px;"> Enter your payment method, and to finish, tap "Reserve Spot"</li>
+                <li style = "font-size: 18px;"> To access your reservation, open up the "Reservations" Tab and select your reservation, and scan the QR code while entering and exiting the parking area for access</li>
             </ol>
             <div>
-                <p style = "display: inline-block">SpotHero App:</p>
-                <a href="https://apps.apple.com/us/app/spothero-1-rated-parking-app/id499097243" target="_blank">Apple Store</a>
+                <p style = "display: inline-block; font-size: 18px;">SpotHero App:</p>
+                <a href="https://apps.apple.com/us/app/spothero-1-rated-parking-app/id499097243" target="_blank" style = "font-size: 18px;">Apple Store</a>
                 <p style = "display: inline-block"> | </p>
-                <a href="https://play.google.com/store/apps/details?id=com.spothero.spothero&hl=en_US&gl=US" target="_blank">Google Play Store</a>
+                <a href="https://play.google.com/store/apps/details?id=com.spothero.spothero&hl=en_US&gl=US" target="_blank" style = "font-size: 18px;">Google Play Store</a>
             </div>
         </div>
     </body>
