--- a/uberLyft.html
+++ b/uberLyft.html
@@ -22,14 +22,14 @@
     <h2 style="text-align: center;"> Uber and Lyft </h2>   
     <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">Ride Hailing and Sharing throughout Chicago</p>
+        <p style="padding-bottom: 5px; font-size: 18px;">Ride Hailing and Sharing throughout Chicago</p>
         
 
         <h4>Costs:</h4>
-        <p style="padding-bottom: 5px;"> Costs vary on a ride by ride basis</p>
+        <p style="padding-bottom: 5px; font-size: 18px;"> Costs vary on a ride by ride basis</p>
 
         <h4>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status <br>
+        <p style="padding-bottom: 5px; font-size: 18px;">All visitors are required to wear face masks regardless of vaccination status <br>
             Some drivers will require rides to sit diagonal from them, to promote social distancing </p>
         <br>
 
@@ -38,36 +38,36 @@
 
         <h5>Steps to Ride with Uber:</h5>
         <ol>
-            <li>Download the Uber app and make an account</li>
-            <li>Select the "Ride" option</li>
-            <li>Enter your current location and destination</li>
-            <li>Select your ride (UberX, UberXL, Uber Black, Uber Cab, etc.)</li>
-            <li>Tap 'Confirm' to shecdule your ride!</li>
+            <li style = "font-size: 18px;">Download the Uber app and make an account</li>
+            <li style = "font-size: 18px;">Select the "Ride" option</li>
+            <li style = "font-size: 18px;">Enter your current location and destination</li>
+            <li style = "font-size: 18px;">Select your ride (UberX, UberXL, Uber Black, Uber Cab, etc.)</li>
+            <li style = "font-size: 18px;">Tap 'Confirm' to shecdule your ride!</li>
         </ol>
-        <a href="https://www.uber.com/" target="_blank">Uber Main Website</a>
+        <a href="https://www.uber.com/" target="_blank" style = "font-size: 18px;">Uber Main Website</a>
         <div>
             <p style = "display: inline-block">Uber App:</p>
-            <a href="https://apps.apple.com/us/app/uber-request-a-ride/id368677368" target="_blank">Apple Store</a>
+            <a href="https://apps.apple.com/us/app/uber-request-a-ride/id368677368" target="_blank" style = "font-size: 18px;">Apple Store</a>
             <p style = "display: inline-block"> | </p>
-            <a href="https://play.google.com/store/apps/details?id=com.ubercab&hl=en_US&gl=US" target="_blank">Google Play Store</a>
+            <a href="https://play.google.com/store/apps/details?id=com.ubercab&hl=en_US&gl=US" target="_blank" style = "font-size: 18px;">Google Play Store</a>
         </div>
 
         <br>
         <br>
         <h5>Steps to Ride with Lyft:</h5>
         <ol>
-            <li>Download the Lyft app and make an account</li>
-            <li>Tap 'Search Destination' and enter your destination</li>
-            <li>Choose your date and time and tap 'Set pickup time'</li>
-            <li>Confirm your pickup location and dropoff location</li>
-            <li>Tap 'Schedule' to schedule your ride!</li>
+            <li style = "font-size: 18px;">Download the Lyft app and make an account</li>
+            <li style = "font-size: 18px;">Tap 'Search Destination' and enter your destination</li>
+            <li style = "font-size: 18px;">Choose your date and time and tap 'Set pickup time'</li>
+            <li style = "font-size: 18px;">Confirm your pickup location and dropoff location</li>
+            <li style = "font-size: 18px;">Tap 'Schedule' to schedule your ride!</li>
         </ol>
-        <a href="https://www.lyft.com/" target="_blank">Lyft Main Website</a>
+        <a href="https://www.lyft.com/" target="_blank" style = "font-size: 18px;">Lyft Main Website</a>
         <div>
             <p style = "display: inline-block">Lyft App:</p>
-            <a href = "https://apps.apple.com/us/app/lyft/id529379082">Apple Store</a>
-            <p style = "display: inline-block"> | </p>
-            <a href="https://play.google.com/store/apps/details?id=me.lyft.android&hl=en_US&gl=US" target="_blank">Google Play Store</a>
+            <a href = "https://apps.apple.com/us/app/lyft/id529379082" style = "font-size: 18px;">Apple Store</a>
+            <p style = "display: inline-block; font-size: 18px;"> | </p>
+            <a href="https://play.google.com/store/apps/details?id=me.lyft.android&hl=en_US&gl=US" target="_blank" style = "font-size: 18px;">Google Play Store</a>
         </div>
 
         <br>
