--- a/waterTower.html
+++ b/waterTower.html
@@ -22,30 +22,30 @@
     <h2 style="text-align: center;"> Water Tower Place </h2>   
     <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">Water Tower Place contains a shopping mall, hotel, theater, and comndominiums in its 74 story tall skyscraper.</p>
+        <p style="padding-bottom: 5px; font-size: 18px;">Water Tower Place contains a shopping mall, hotel, theater, and comndominiums in its 74 story tall skyscraper.</p>
 
         <br>
 
         <h4>Stores:</h4>
-        <p>Water Tower Place Mall has 110 stores, including: </p>
+        <p style = "font-size: 18px;">Water Tower Place Mall has 110 stores, including: </p>
         <ul>
-            <li>Adidas</li>
-            <li>Aeropostale</li>
-            <li>American Girl</li>
-            <li>Bath & Body Works</li>
-            <li>Forever 21</li> 
-            <li>Garrett Popcorn Shops</li>
-            <li>Lego</li>
-            <li>Sephora</li>
-            <li>And more!</li>
+            <li style = "font-size: 18px;">Adidas</li>
+            <li style = "font-size: 18px;">Aeropostale</li>
+            <li style = "font-size: 18px;">American Girl</li>
+            <li style = "font-size: 18px;">Bath & Body Works</li>
+            <li style = "font-size: 18px;">Forever 21</li> 
+            <li style = "font-size: 18px;">Garrett Popcorn Shops</li>
+            <li style = "font-size: 18px;">Lego</li>
+            <li style = "font-size: 18px;">Sephora</li>
+            <li style = "font-size: 18px;">And more!</li>
         </ul>
-        <a href = "https://www.shopwatertower.com/en/directory/" target="_blank"> For a full list of Stores, Hours, and Locations within the mall, click here!</a>
+        <a href = "https://www.shopwatertower.com/en/directory/" target="_blank" style = "font-size: 18px;"> For a full list of Stores, Hours, and Locations within the mall, click here!</a>
         <br>
         <br>
 
 
         <h4>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;">All visitors are required to wear face masks regardless of vaccination status</p>
+        <p style="padding-bottom: 5px; font-size: 18px;">All visitors are required to wear face masks regardless of vaccination status</p>
 
         <h4>Location:</h4>
         <div class="gmap">
