--- a/cta.html
+++ b/cta.html
@@ -22,11 +22,11 @@
         <h2 style="text-align: center;">Chicago Transit Authority</h2>   
         <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
             <h4>About:</h4> 
-            <p style="padding-bottom: 5px;">The Chicago Transit Authority is a mass transit system in Chicago and it's surrounding suburbs.
+            <p style="padding-bottom: 5px; font-size: 18px;">The Chicago Transit Authority is a mass transit system in Chicago and it's surrounding suburbs.
             The CTA runs 24 hours a day, and has around 1800 busses and 1450 train cars.</p>
             
             <h4>Costs:</h4>
-            <table style="width: 65%;">
+            <table style="width: 65%; font-size: 18px;">
                 <tr>
                     <th> </th>
                     <th>Single Ride</th>
@@ -52,14 +52,14 @@
             <br>
 
             <h4>Covid Guidelines:</h4>
-            <p style="padding-bottom: 5px;">All CTA customers are required to wear face masks regardless of vaccination status and must try to maintain social distancing.</p>
+            <p style="padding-bottom: 5px; font-size: 18px;">All CTA customers are required to wear face masks regardless of vaccination status and must try to maintain social distancing.</p>
             
             <h4>How to Ride with CTA:</h4>
             <ul>
-                <li>Cash: Cash can be used directly on busses or can be used in any Ventra Machines to add value to cards.</li>
-                <li>Ventra Tickets: You can buy disposable paper Single-Ride and 1-Day tickets at vending machines (located in every 'L' station).</li>
-                <li>Ventra Cards: Ventra Cards are used with transit value and passes for regular fares and transfers. Fare you load to your Ventra Card's transit account can be seen and managed at vending machines, online, in the Ventra app, and by phone.</li>
-                <li>Mobile Pay Apps: Ventra readers can accept contactless payments directly from mobile devices, too! You can pay a contactless Pay-As-You-Go (PAYG) fare by touching your phone with Apple Pay, Google Pay and Samsung Pay.</li>
+                <li style = "font-size: 18px;">Cash: Cash can be used directly on busses or can be used in any Ventra Machines to add value to cards.</li>
+                <li style = "font-size: 18px;">Ventra Tickets: You can buy disposable paper Single-Ride and 1-Day tickets at vending machines (located in every 'L' station).</li>
+                <li style = "font-size: 18px;">Ventra Cards: Ventra Cards are used with transit value and passes for regular fares and transfers. Fare you load to your Ventra Card's transit account can be seen and managed at vending machines, online, in the Ventra app, and by phone.</li>
+                <li style = "font-size: 18px;">Mobile Pay Apps: Ventra readers can accept contactless payments directly from mobile devices, too! You can pay a contactless Pay-As-You-Go (PAYG) fare by touching your phone with Apple Pay, Google Pay and Samsung Pay.</li>
             </ul>
             <br>
 
