--- a/lincolnParkZoo.html
+++ b/lincolnParkZoo.html
@@ -22,15 +22,15 @@
     <h2 style="text-align: center;"> Lincoln Park Zoo </h2>   
     <div style = "padding-left: 70px; padding-right: 70px; padding-bottom: 50px;">
         <h4>About:</h4> 
-        <p style="padding-bottom: 5px;">Lincoln Park Zoo is a 35-acre zoo in Lincoln Park. The zoo was founded in 1868, making it the fourth oldest zoo in North America. It is also one of a few free admission zoos in the United States. The zoo is an accredited member of the Association of Zoos and Aquariums.</p?>
+        <p style="padding-bottom: 5px; font-size: 18px;">Lincoln Park Zoo is a 35-acre zoo in Lincoln Park. The zoo was founded in 1868, making it the fourth oldest zoo in North America. It is also one of a few free admission zoos in the United States. The zoo is an accredited member of the Association of Zoos and Aquariums.</p?>
         
         <h4>Costs: </h4>
-        <p> FREE! </p>
+        <p style = "font-size: 18px;"> Lincoln Par Zoo is free for all to enjoy!</p>
 
         <br>
 
         <h4>Covid Guidelines:</h4>
-        <p style="padding-bottom: 5px;">Reservations are no longer required to visit the zoo. However, the zoo respectfully recommend—for the safety of the animals in their care—that all guests continue to wear face coverings at all times in animal buildings.</p>
+        <p style="padding-bottom: 5px; font-size: 18px;">Reservations are no longer required to visit the zoo. However, the zoo respectfully recommend—for the safety of the animals in their care—that all guests continue to wear face coverings at all times in animal buildings.</p>
 
 
         <h4>Location:</h4>
@@ -44,7 +44,7 @@
                 Chicago, IL 60614
                <br>
                <br>
-               <a href="https://www.lpzoo.org/" target="_blank">Lincoln Park Zoo Website</a>
+               <a href="https://www.lpzoo.org/" target="_blank" style = "font-size: 18px;">Lincoln Park Zoo Website</a>
             </p>
 
         </div>
