more font changes

--- a/MSI.html
+++ b/MSI.html
@@ -95,7 +95,7 @@
                 Chicago, IL 60611
                <br>
                <br>
-               <a href="https://msichicago.org/" target="_blank">Museum of Science and Industry Main Website</a>
+               <a href="https://msichicago.org/" target="_blank" style="font-size: 18px;">Museum of Science and Industry Main Website</a>
             </p>
             
         </div>
