--- a/adlerPlanetarium.html
+++ b/adlerPlanetarium.html
@@ -85,7 +85,7 @@
                <br>
                <br>
                <a href="hhttps://www.adlerplanetarium.org/" 
-               target="_blank">Adler Planetarium Main Website</a>
+               target="_blank" style = "font-size: 18px;">Adler Planetarium Main Website</a>
             </p>
             
         </div>
