--- a/artInstitute.html
+++ b/artInstitute.html
@@ -78,7 +78,7 @@
                <br>
                <br>
                <a href="https://www.artic.edu/" 
-               target="_blank">Art Institute Main Website</a>
+               target="_blank" style="font-size: 18px;">Art Institute Main Website</a>
             </p>
             
         </div>
