--- a/childrensMuseum.html
+++ b/childrensMuseum.html
@@ -67,7 +67,7 @@
                <br>
                <br>
                <a href="https://www.chicagochildrensmuseum.org/" 
-               target="_blank">Children's Museum Main Website</a>
+               target="_blank" style = "font-size: 18px;">Children's Museum Main Website</a>
             </p>
             
         </div>
