--- a/sheddAquarium.html
+++ b/sheddAquarium.html
@@ -92,7 +92,7 @@
                 Chicago, IL 60605
                <br>
                <br>
-               <a href="https://www.sheddaquarium.org/" target="_blank">Shedd Aquarium Main Website</a>
+               <a href="https://www.sheddaquarium.org/" target="_blank" style = "font-size: 18px;">Shedd Aquarium Main Website</a>
             </p>
             
         </div>
